--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
   <!-- Header CSS-->
   <link rel="stylesheet" href="./styles/header.css">
 
+  <!-- New Tweet CSS-->
+  <link rel="stylesheet" href="./styles/new-tweet.css">
+
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -50,7 +53,7 @@
     </div>
     <!-- <br> -->
     <div>
-        <h2>Jenna Jetson</h2>
+        <h2><b>Jenna</b> Jetson</h2>
     </div>
   </header>
   <!-- Page-specific (main) content here -->
@@ -58,9 +61,9 @@
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
       <form action="/tweets/" method="POST">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
-        <div>
+        <label for="tweet-text"></label>
+        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        <div class="button-counter">
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
