add basic styling for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,29 @@
         </div>
       </form>
     </section>
+    <section>
+      <div>
+        <article class="tweet">
+          <header>
+            <div class="avi">
+              <i class="fas fa-user-alt"></i>
+            </div>
+            <div class="username">@TheDijkstra</div>
+          </header>
+          <div class="tweet-body">
+            The use of COBOL cripples the mind; its teaching should, therefore, be regarded as a criminal offence
+          </div>
+          <footer>
+            <div class="tweet-date">10 days ago</div>
+            <div class="tweet-icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+      </div>
+    </section>
   </main>
   
   
