add hashtags to tweets + styling

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <div class="username">@TheDijkstra</div>
           </header>
           <div class="tweet-body">
-            The use of COBOL cripples the mind; its teaching should, therefore, be regarded as a criminal offence
+            The use of COBOL cripples the mind; its teaching should, therefore, be regarded as a criminal offence. <span class="hashtags">#yeahisaidit</span> 
           </div>
           <footer>
             <div class="tweet-date">10 days ago</div>
