fix tweets header - add username + CSS

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
           <header>
             <div class="avi">
               <i class="fas fa-user-alt"></i>
+              Eric Dijkstra
             </div>
             <div class="username">@TheDijkstra</div>
           </header>
