--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,26 @@
             <div class="username">@TheDijkstra</div>
           </header>
           <div class="tweet-body">
+            With respect to COBOL you can really do only one of two things: fight the disease or pretend that it does not exist. Most Computer Science Departments have opted for the latter easy way out... <span class="hashtags">#COBOLrants</span> 
+          </div>
+          <footer>
+            <div class="tweet-date">10 days ago</div>
+            <div class="tweet-icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+        <article class="tweet">
+          <header>
+            <div class="avi">
+              <i class="fas fa-user-alt"></i>
+              Eric Dijkstra
+            </div>
+            <div class="username">@TheDijkstra</div>
+          </header>
+          <div class="tweet-body">
             The use of COBOL cripples the mind; its teaching should, therefore, be regarded as a criminal offence. <span class="hashtags">#yeahisaidit</span> 
           </div>
           <footer>
