wrap tweet articles in div with id of tweets-container

--- a/public/index.html
+++ b/public/index.html
@@ -72,18 +72,18 @@
         </div>
       </form>
     </section>
-    <section>
-      <div>
+    <section id='tweets-container'>
+      
         <article class="tweet">
           <header>
             <div class="avi">
               <i class="fas fa-user-alt"></i>
-              Eric Dijkstra
+              <div class='username'>Eric Dijkstra</div>
             </div>
-            <div class="username">@TheDijkstra</div>
+            <div class="handle">@TheDijkstra</div>
           </header>
           <div class="tweet-body">
-            With respect to COBOL you can really do only one of two things: fight the disease or pretend that it does not exist. Most Computer Science Departments have opted for the latter easy way out... <span class="hashtags">#COBOLrants</span> 
+            With respect to COBOL you can really do only one of two things: fight the disease or pretend that it does not exist. <span class="hashtags">#COBOLrants</span> 
           </div>
           <footer>
             <div class="tweet-date">10 days ago</div>
@@ -98,9 +98,9 @@
           <header>
             <div class="avi">
               <i class="fas fa-user-alt"></i>
-              Eric Dijkstra
+              <div class='username'>Eric Dijkstra</div>
             </div>
-            <div class="username">@TheDijkstra</div>
+            <div class="handle">@TheDijkstra</div>
           </header>
           <div class="tweet-body">
             The use of COBOL cripples the mind; its teaching should, therefore, be regarded as a criminal offence. <span class="hashtags">#yeahisaidit</span> 
@@ -114,7 +114,7 @@
             </div>
           </footer>
         </article>
-      </div>
+    
     </section>
   </main>
   
