--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta Information -->
+    <title>Tweeter - Home Page</title>
 
-<head>
-  <!-- Meta Information -->
-  <title>Tweeter - Home Page</title>
+    <!-- External CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
 
-  <!-- External CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    type="text/css" />
+    <!-- External Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- External Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
-    rel="stylesheet">
+    <!-- App CSS -->
+    <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
 
-  <!-- App CSS -->
-  <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
+    <!-- Nav CSS-->
+    <link rel="stylesheet" href="./styles/nav.css" />
 
-  <!-- Nav CSS-->
-  <link rel="stylesheet" href="./styles/nav.css">
+    <!-- Header CSS-->
+    <link rel="stylesheet" href="./styles/header.css" />
 
-  <!-- Header CSS-->
-  <link rel="stylesheet" href="./styles/header.css">
+    <!-- New Tweet CSS-->
+    <link rel="stylesheet" href="./styles/new-tweet.css" />
 
-  <!-- New Tweet CSS-->
-  <link rel="stylesheet" href="./styles/new-tweet.css">
+    <!-- Font Awesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- External JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  <!-- External JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- App JS -->
+    <script type="text/javascript" src="/scripts/client.js"></script>
 
-  <!-- App JS -->
-  <script type="text/javascript" src="/scripts/client.js"></script>
+    <!-- Char Counter JS-->
+    <script
+      type="text/javascript"
+      src="./scripts/composer-char-counter.js"
+    ></script>
 
-  <!-- Char Counter JS-->
-  <script type='text/javascript' src="./scripts/composer-char-counter.js"></script>
+    <!-- Timeago JS-->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+      integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </head>
 
-  <!-- Timeago JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
-
-<body>
-  <!-- Top nav bar (fixed) -->
-  <nav>
-    <span class='brand'>tweeter</span>
-    <div class="nav-tweet">
-      <span><strong>Write</strong> a new tweet </span>
-      <i class="fas fa-angle-double-down"></i>
-    </div>
-    
-  </nav>
-  <header class="head">
-    <div>
-        <img src="/images/profile-hex.png"> 
-    </div>
-    <!-- <br> -->
-    <div>
+  <body>
+    <!-- Top nav bar (fixed) -->
+    <nav>
+      <span class="brand">tweeter</span>
+      <div class="nav-tweet">
+        <span><strong>Write</strong> a new tweet </span>
+        <i class="fas fa-angle-double-down"></i>
+      </div>
+    </nav>
+    <header class="head">
+      <div>
+        <img src="/images/profile-hex.png" />
+      </div>
+      <!-- <br> -->
+      <div>
         <h2><b>Jenna</b> Jetson</h2>
-    </div>
-  </header>
-  <!-- Page-specific (main) content here -->
-  <main class="container">
-    <section class="new-tweet">
-      <h2>Compose Tweet</h2>
-      <form id='target' action="/tweets/" method="POST">
-        <label for="tweet-text"></label>
-        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
-        <div class="button-counter">
-          <button id='submit-tweet' type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-    </section>
-    <section id='tweets-container'></section>
-  </main>
-  
-  
-</body>
-
+      </div>
+    </header>
+    <!-- Page-specific (main) content here -->
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form id="target" action="/tweets/" method="POST">
+          <label for="tweet-text"></label>
+          <textarea
+            name="text"
+            id="tweet-text"
+            placeholder="What are you humming about?"
+          ></textarea>
+          <div class="button-counter">
+            <button id="submit-tweet" type="submit">Tweet</button>
+            <output id="counter" name="counter" class="counter" for="tweet-text"
+              >140</output
+            >
+          </div>
+        </form>
+      </section>
+      <section id="tweets-container"></section>
+    </main>
+  </body>
 </html>
